--- a/src/styles/Flowers.css
+++ b/src/styles/Flowers.css
@@ -17,7 +17,8 @@
 .color-palette div {
   display: inline-block;
   text-align: center;
-  height: 100px;
-  width: 100px;
+  height: 50px;
+  width: 200px;
   margin: 10px;
+  padding-top: 25px;
 }
