import classnames to flowers with mind to add a selected class to season/colors

--- a/src/styles/Form.css
+++ b/src/styles/Form.css
@@ -19,7 +19,9 @@
 }
 
 .form-container button:hover {
-    background-color:#8bafbd;
+  /*background-color:#8bafbd;*/
+  border-width: 2px;
+  font-weight: 700;
 }
 
 .form-container h2, h3 {
