--- a/src/styles/Flowers.css
+++ b/src/styles/Flowers.css
@@ -6,10 +6,11 @@
   flex-wrap: wrap;
   flex-direction: column;
   align-items: center;
+  margin-top: 100px;
 }
 
 .flowers-div h2 {
-  font-family: 'Sacramento', cursive;
+  font-family: 'Parisienne', cursive;
   font-size: 30px;
   margin: 10px;
 }
@@ -23,22 +24,27 @@
 }
 
 .color-palette p {
-  font-family: 'Sacramento', cursive;
+  font-family: 'Parisienne', cursive;
   font-size: 25px;
 }
 
 .indv-flower img {
+  margin: 5px;
   height: 100px;
   width: 100px;
 }
 
+.indv-flower p {
+  margin: 5px;
+}
+
 .indv-flower {
-  /*display: flex;
+  display: flex;
   flex-wrap: wrap;
-  flex-direction: column;*/
+  flex-direction: column;
+  align-items: center;
   margin-bottom: 15px;
   margin-top: 40px;
-  width: 20%;
   word-wrap: normal;
 }
 
@@ -47,6 +53,6 @@ div p {
 }
 
 .flower-name {
-  font-family: 'Sacramento', cursive;
+  font-family: 'Parisienne', cursive;
   font-size: 30px;
 }
