--- a/src/styles/Form.css
+++ b/src/styles/Form.css
@@ -6,6 +6,7 @@
   flex-wrap: wrap;
   flex-direction: column;
   align-items: center;
+  margin-top: 100px;
 }
 
 .form-container button {
@@ -26,17 +27,38 @@
   background-color:#8bafbd;
 }
 
-
 .form-container .activeSeasonButton {
   background-color: #8bafbd;
 }
 
 .colors-div .activeColorButton {
-  background-color: #8bafbd;
+  font-size: 0px;
+  width: 50px;
+  height: 50px;
+  margin: 5px;
+  border: 1px solid #091221;
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
+  border-radius: 50%;
 }
 
-.form-container h2, h3 {
-  font-family: 'Sacramento', cursive;
+.colors-div .color {
+  font-size: 0px;
+  width: 40px;
+  height: 40px;
+  margin: 5px;
+  border-radius: 50%;
+}
+
+.selected-colors {
+  display: inline-block;
+}
+
+.form-container h2 {
+  font-family: 'Parisienne', cursive;
+}
+
+.form-container h3 {
+  font-weight: 400;
 }
 
 .form-container h2 {
@@ -49,10 +71,6 @@
   margin: 30px 10px 10px 10px;
 }
 
-.season-button {
-  display: inline-block;
-}
-
 .colors-div {
   display: flex;
   flex-direction: row;
@@ -61,7 +79,7 @@
   margin-bottom: 20px;
 }
 
-.color {
-  height: 20px;
-  width: 200px;
+.selected-colors-div div {
+  display: inline-block;
+  margin: 5px;
 }
