--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -5,14 +5,22 @@ header {
   padding: 0;
   margin: 0;
   text-align: center;
-  height: 100px;
-  width: 100vw;
+  height: 75px;
   background-color: rgba(255,255,255,0.7);
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 100;
 }
 
 .header-text {
-  font-family: 'Sacramento', cursive;
-  font-size: 65px;
+  font-family: 'Parisienne', cursive;
+  font-size: 60px;
   margin: 0;
   padding-top: 10px;
+}
+
+body.scrolled header {
+  background-color: rgba(255,255,255,1);
+  transition: background-color .10s;
 }
