--- a/src/styles/Welcome.css
+++ b/src/styles/Welcome.css
@@ -5,11 +5,11 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  font-weight: 400;
+  margin-top: 100px;
 }
 
 .welcome-text h2 {
-  font-family: 'Sacramento', cursive;
+  font-family: 'Parisienne', cursive;
   font-size: 35px;
   text-align: center;
   margin: 10px;
