--- a/src/styles/Form.css
+++ b/src/styles/Form.css
@@ -7,6 +7,7 @@
   flex-direction: column;
   align-items: center;
   margin-top: 100px;
+  text-align: center;
 }
 
 .form-container button {
@@ -20,15 +21,15 @@
 }
 
 .form-container .season-button:hover {
-  background-color:#8bafbd;
+  background-color:#fff7ce;
 }
 
 .form-container .submit:hover {
-  background-color:#8bafbd;
+  background-color:#fff7ce;
 }
 
 .form-container .activeSeasonButton {
-  background-color: #8bafbd;
+  background-color: #fff7ce;
 }
 
 .colors-div .activeColorButton {
@@ -36,9 +37,8 @@
   width: 50px;
   height: 50px;
   margin: 5px;
-  border: 1px solid #091221;
-  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
   border-radius: 50%;
+  border: 1px solid #091221;
 }
 
 .colors-div .color {
@@ -59,17 +59,15 @@
 
 .form-container h3 {
   font-weight: 400;
+  font-size: 20px;
+  margin: 30px 10px 10px 10px;
 }
 
 .form-container h2 {
-  font-size: 30px;
+  font-size: 35px;
   margin: 10px;
 }
 
-.form-container h3 {
-  font-size: 25px;
-  margin: 30px 10px 10px 10px;
-}
 
 .colors-div {
   display: flex;
@@ -82,4 +80,10 @@
 .selected-colors-div div {
   display: inline-block;
   margin: 5px;
+}
+
+@media screen and (max-width: 360px) {
+    .form-container h3 {
+        font-size: 20px;
+    }
 }
