--- a/src/styles/Welcome.css
+++ b/src/styles/Welcome.css
@@ -21,9 +21,19 @@
   padding: 6px;
   background-color: #feb890;
   height: 30px;
-  margin: 10px;
+  margin: 20px;
 }
 
 .begin-button:hover {
-  background-color:#8bafbd;
+  background-color:#fff7ce;
+}
+
+@media screen and (max-width: 360px) {
+    .welcome-text h2 {
+        font-size: 30px;
+    }
+
+    p {
+      font-size: 15px;
+    }
 }
