--- a/src/styles/Flowers.css
+++ b/src/styles/Flowers.css
@@ -2,33 +2,66 @@
   background-color: rgba(255,255,255,0.7);
   margin: 20px;
   padding: 20px;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
   margin-top: 100px;
-  text-align: center;
+  /*text-align: center;*/
+  box-shadow: 0px 0px 13px grey;
 }
 
 .flowers-div h2 {
-  font-family: 'Parisienne', cursive;
+  text-align: center;
+  /*font-family: 'Parisienne', cursive;*/
   font-size: 35px;
+  font-weight: 300;
   margin: 10px;
 }
 
-.color-palette div {
-  display: inline-block;
+.colors {
   text-align: center;
-  height: 100px;
-  width: 200px;
-  padding-top: 10px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-.color-palette p {
-  font-size: 17px;
+.palette-div {
+  height: 180px;
+  width: 150px;
+  text-align: center;
+  margin: 10px;
+  border: 1px solid gray;
+  background-color: rgba(255,255,255,0.8);
+  box-shadow: 0 0 5px gray;
+}
+
+.palette {
+  border-bottom: 1px solid gray;
+  height: 150px;
+  width: 150px;
+}
+
+.color-name {
+  font-size: 15px;
+  margin: 5px;
 }
 
 @media screen and (max-width: 360px) {
     .flowers-div h2 {
-        font-size: 30px;
+        font-size: 25px;
+    }
+
+    .palette-div {
+      height: 90px;
+      width: 70px;
+      margin: 2px;
+    }
+
+    .palette {
+      height: 70px;
+      width: 70px;
+    }
+
+    .color-name {
+      margin: 3px;
+      font-size: 10px;
     }
 }
