--- a/src/styles/Form.css
+++ b/src/styles/Form.css
@@ -8,37 +8,39 @@
   align-items: center;
   margin-top: 100px;
   text-align: center;
+  box-shadow: 0px 0px 13px grey;
 }
 
 .form-container button {
     outline: none;
     border: 1px solid #091221;
     padding: 6px;
-    background-color: #feb890;
+    background-color: inherit;
     height: 30px;
     margin: 15px;
     width: 90px;
 }
 
 .form-container .season-button:hover {
-  background-color:#fff7ce;
+  background-color: lightcoral;
 }
 
 .form-container .submit:hover {
-  background-color:#fff7ce;
+  background-color: lightcoral;
 }
 
 .form-container .activeSeasonButton {
-  background-color: #fff7ce;
+  background-color: lightcoral;
 }
 
 .colors-div .activeColorButton {
+  border: 1px solid gray;
   font-size: 0px;
   width: 50px;
   height: 50px;
   margin: 5px;
   border-radius: 50%;
-  border: 1px solid #091221;
+  box-shadow: 0 0 5px gray;
 }
 
 .colors-div .color {
