--- a/src/styles/Welcome.css
+++ b/src/styles/Welcome.css
@@ -6,6 +6,7 @@
   flex-wrap: wrap;
   justify-content: center;
   margin-top: 100px;
+  box-shadow: 0px 0px 13px grey;
 }
 
 .welcome-text h2 {
@@ -19,13 +20,13 @@
   outline: none;
   border: 1px solid #091221;
   padding: 6px;
-  background-color: #feb890;
+  background-color: inherit;
   height: 30px;
   margin: 20px;
 }
 
 .begin-button:hover {
-  background-color:#fff7ce;
+  background-color: lightcoral;
 }
 
 @media screen and (max-width: 360px) {
