--- a/src/styles/FlowerCard.css
+++ b/src/styles/FlowerCard.css
@@ -1,16 +1,24 @@
+.fav-div {
+  background-color: rgba(255,255,255,0.7);
+  margin: 20px;
+  padding: 20px;
+  margin-top: 100px;
+  box-shadow: 0px 0px 13px grey;
+}
+
+.flower-card-div {
+  background-color: rgba(255,255,255,0.8);
+  box-shadow: 0 0 5px gray;
+  height: 230px;
+  margin: 10px;
+}
+
 .indv-flower img {
   width: 200px;
   float: left;
   margin-left: 10px;
   margin: 15px;
   box-shadow: 0 0 5px gray;
-}
-
-.indv-flower {
-  background-color: rgba(255,255,255,0.8);
-  box-shadow: 0 0 5px gray;
-  height: 230px;
-  margin: 10px;
 }
 
 .flower-name {
@@ -46,8 +54,8 @@
     margin-bottom: 0px;
   }
 
-  .indv-flower {
-    height: 250px;
+  .flower-card-div {
+    height: 310px;
     padding: 0px;
     text-align: center;
   }
@@ -64,6 +72,10 @@
   .flower-info {
     padding-left: 0px;
     padding-top: 0px;
+  }
+
+  .fav-button {
+    margin: 5px;
   }
 
 }
