--- a/src/styles/Flowers.css
+++ b/src/styles/Flowers.css
@@ -4,13 +4,17 @@
   padding: 20px;
   margin-top: 100px;
   box-shadow: 0px 0px 13px grey;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
 }
 
 .flowers-div h2 {
   text-align: center;
   font-size: 35px;
   font-weight: 300;
-  margin: 10px;
+  margin: 15px;
 }
 
 .colors {
@@ -19,6 +23,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+  margin: 10px;
 }
 
 .palette-div {
@@ -47,6 +52,16 @@
   margin: 2px;
 }
 
+.flowers-div a {
+  border: 1px solid #091221;
+  background-color: inherit;
+  padding: 5px;
+}
+
+.flowers-div a:hover {
+  background-color: lightcoral;
+}
+
 @media screen and (max-width: 600px) {
     .flowers-div h2 {
         font-size: 25px;
@@ -70,5 +85,10 @@
 
     .color-hex {
       font-size: 8px;
+    }
+
+    .flowers-div a {
+      font-size: 12px;
+      padding: 5px;
     }
 }
